<resources>
    <string name="app_name">tip time</string>
    <string name="hint">Cost of Service</string>
    <string name="service_question">How was the service?</string>
    <string name="service_feedback">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="okay_service">Okay (20%)</string>
    <string name="round_up_tip">round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
</resources>